# cakectf-2021-public

./: CNAME  README.md  index.html
.github/workflows/: next_export.yml
404/: index.html
crypto/discrete-log/: Makefile  task.yml
crypto/improvisation/: task.yml
crypto/matrixcipher/: Makefile  task.yml
crypto/party_ticket/: Makefile  task.yml
crypto/together_as_one/: task.yml
misc/break_a_leg/: task.yml
misc/kingtaker/: Dockerfile  docker-compose.yml  task.yml
misc/telepathy/: Makefile  docker-compose.yml  task.yml
misc/yoshi_shogi/: Dockerfile  docker-compose.yml  task.yml
misc/yoshi_shogi/challenge/shogi/: Cargo.toml  gen.py
misc/yoshi_shogi/challenge/shogi/src/: main.rs
pwn/got_it/: docker-compose.yml  task.yml
pwn/hwdbg/: task.yml
pwn/jit4b/: Dockerfile  docker-compose.yml  task.yml
pwn/not_so_tiger/: docker-compose.yml  task.yml
pwn/uaf4b/: Dockerfile  docker-compose.yml  task.yml
ranking/: index.html
reversing/aldrya/: Dockerfile  docker-compose.yml  task.yml
reversing/hash_browns/: task.yml
reversing/nostrings/: Makefile  task.yml
reversing/rflag/: Dockerfile  docker-compose.yml  task.yml
tasks/: index.html
tasks/1208267885/: index.html
tasks/1293059753/: index.html
tasks/1393974237/: index.html
tasks/144126042/: index.html
tasks/1465604447/: index.html
tasks/171615761/: index.html
tasks/1992336788/: index.html
tasks/21001906/: index.html
ui-cake/: .eslintrc  .gitignore  Dockerfile.nginx.prod  Dockerfile.prod  next.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json
(+452 files in other folders)
