[package]
name = "yoshi-shogi"
version = "0.1.0"
authors = ["ptr-yudai <ptr.yudai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rand = "0.8.3"
